--- a/Root.Directory/css/background.css
+++ b/Root.Directory/css/background.css
@@ -1,195 +1,71 @@
- @-webkit-keyframes star-opacity {
-            0% {
-                opacity: 0
-            }
+/* 在 style 标签或者外部样式表中 */
+.index-bg {
+    width: 100vw;
+    height: 100vh;
+    background: linear-gradient(-225deg, #473B7B 0%, #3584A7 51%, #30D2BE 100%);
+    overflow: hidden;
+    position: relative;
+}
 
-            40% {
-                opacity: 1
-            }
+.index-bg .stars {
+    height: 100%;
+    position: relative;
+}
 
-            60% {
-                opacity: 1
-            }
+.index-bg .star {
+    display: block;
+    width: 5px;
+    height: 5px;
+    border-radius: 50%;
+    background: #fff;
+    position: absolute;
+    transform-origin: 100% 0;
+    animation: star-opacity 5s infinite ease-in, star-pos 5s infinite ease-in;
+    box-shadow: 0 0 5px 5px rgba(255, 255, 255, .3);
+    opacity: 0;
+    z-index: 2;
+}
 
-            100% {
-                opacity: 0
-            }
-        }
+.index-bg .star:after {
+    content: '';
+    display: block;
+    top: 0;
+    left: 4px;
+    border: 0 solid #fff;
+    border-width: 0 90px 2px;
+    border-color: transparent transparent transparent rgba(255, 255, 255, .3);
+    transform: rotate(-45deg) translate3d(1px, 3px, 0);
+    box-shadow: 0 0 1px 0 rgba(255, 255, 255, .1);
+    transform-origin: 0% 100%;
+}
 
-        @keyframes star-opacity {
-            0% {
-                opacity: 0
-            }
+/* 定义星星透明度和位置动画 */
+@keyframes star-opacity {
+    0% {
+        opacity: 0;
+    }
+    40% {
+        opacity: 1;
+    }
+    60% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
+}
 
-            40% {
-                opacity: 1
-            }
+@keyframes star-pos {
+    0% {
+        transform: scale(0) rotate(0) translate3d(0, 0, 0);
+    }
+    100% {
+        transform: scale(1) rotate(0) translate3d(-450px, 450px, 0);
+    }
+}
 
-            60% {
-                opacity: 1
-            }
-
-            100% {
-                opacity: 0
-            }
-        }
-
-        @-webkit-keyframes star-pos {
-            0% {
-                transform: scale(0) rotate(0) translate3d(0, 0, 0);
-                -webkit-transform: scale(0) rotate(0) translate3d(0, 0, 0);
-                -moz-transform: scale(0) rotate(0) translate3d(0, 0, 0)
-            }
-
-            100% {
-                transform: scale(1) rotate(0) translate3d(-450px, 450px, 0);
-                -webkit-transform: scale(1) rotate(0) translate3d(-450px, 450px, 0);
-                -moz-transform: scale(1) rotate(0) translate3d(-450px, 450px, 0)
-            }
-        }
-
-        @keyframes star-pos {
-            0% {
-                transform: scale(0) rotate(0) translate3d(0, 0, 0);
-                -webkit-transform: scale(0) rotate(0) translate3d(0, 0, 0);
-                -moz-transform: scale(0) rotate(0) translate3d(0, 0, 0)
-            }
-
-            100% {
-                transform: scale(1) rotate(0) translate3d(-450px, 450px, 0);
-                -webkit-transform: scale(1) rotate(0) translate3d(-450px, 450px, 0);
-                -moz-transform: scale(1) rotate(0) translate3d(-450px, 450px, 0)
-            }
-        }
-
-        body {
-            padding: 0;
-            margin: 0;
-            overflow: hidden; /* 隐藏滚动条 */
-        }
-
-        .index-bg {
-            width: 100vw;
-            height: 100vh;
-            background: linear-gradient(-225deg, #473B7B 0%, #3584A7 51%, #30D2BE 100%);
-            overflow: hidden; /* 隐藏滚动条 */
-            position: relative; /* 确保星星的相对定位 */
-        }
-
-        .index-bg .stars {
-            height: 100%;
-            position: relative;
-        }
-
-        .index-bg .star {
-            display: block;
-            width: 5px;
-            height: 5px;
-            border-radius: 50%;
-            background: #fff;
-            position: absolute;
-            -webkit-transform-origin: 100% 0;
-            transform-origin: 100% 0;
-            -webkit-animation: star-opacity 5s infinite ease-in, star-pos 5s infinite ease-in;
-            animation: star-opacity 5s infinite ease-in, star-pos 5s infinite ease-in;
-            -webkit-box-shadow: 0 0 5px 5px rgba(255, 255, 255, .3);
-            box-shadow: 0 0 5px 5px rgba(255, 255, 255, .3);
-            opacity: 0;
-            z-index: 2
-        }
-
-        .index-bg .star:after {
-            content: '';
-            display: block;
-            top: 0;
-            left: 4px;
-            border: 0 solid #fff;
-            border-width: 0 90px 2px;
-            border-color: transparent transparent transparent rgba(255, 255, 255, .3);
-            -webkit-transform: rotate(-45deg) translate3d(1px, 3px, 0);
-            transform: rotate(-45deg) translate3d(1px, 3px, 0);
-            -webkit-box-shadow: 0 0 1px 0 rgba(255, 255, 255, .1);
-            box-shadow: 0 0 1px 0 rgba(255, 255, 255, .1);
-            -webkit-transform-origin: 0% 100%;
-            transform-origin: 0% 100%
-        }
-
-        /* 调整星星的位置，使其在不同屏幕上更好地分布 */
-        .index-bg .star:nth-child(1) {
-            top: 10%;
-            left: 20%;
-            animation-delay: 0s;
-        }
-
-        .index-bg .star:nth-child(2) {
-            top: 30%;
-            left: 50%;
-            animation-delay: 1s;
-        }
-
-        .index-bg .star:nth-child(3) {
-            top: 50%;
-            left: 80%;
-            animation-delay: 2s;
-        }
-
-        .index-bg .star:nth-child(4) {
-            top: 70%;
-            left: 40%;
-            animation-delay: 3s;
-        }
-
-        .index-bg .star:nth-child(5) {
-            top: 90%;
-            left: 60%;
-            animation-delay: 4s;
-        }
-
-        .index-bg .star:nth-child(6) {
-            top: 20%;
-            left: 90%;
-            animation-delay: 5s;
-        }
-
-        .index-bg .star:nth-child(7) {
-            top: 80%;
-            left: 10%;
-            animation-delay: 6s;
-        }
-
-        @media (max-width: 768px) {
-            .index-bg .star:nth-child(1) {
-                top: 15%;
-                left: 25%;
-            }
-
-            .index-bg .star:nth-child(2) {
-                top: 35%;
-                left: 55%;
-            }
-
-            .index-bg .star:nth-child(3) {
-                top: 55%;
-                left: 75%;
-            }
-
-            .index-bg .star:nth-child(4) {
-                top: 75%;
-                left: 45%;
-            }
-
-            .index-bg .star:nth-child(5) {
-                top: 95%;
-                left: 65%;
-            }
-
-            .index-bg .star:nth-child(6) {
-                top: 25%;
-                left: 85%;
-            }
-
-            .index-bg .star:nth-child(7) {
-                top: 85%;
-                left: 15%;
-            }
-        }
+/* 响应式布局，可以根据需要调整 */
+@media (max-width: 768px) {
+    /* 在小屏幕上的位置调整 */
+    /* 这里可以根据需要进行调整 */
+}
